--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,22 @@
   margin: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-    
 }
-body{
+body {
   background: #3f3e3e;
 }
-.container {
+/* .container {
   width: 100%;
   height: 100vh;
 
-}
+} */
 
 .card {
   background-image: linear-gradient(135deg, #00e1b6, #5a558a);
   width: 90%;
   max-width: 400px;
   padding: 50px 30px;
-  margin: 80px auto 0;
+  margin: 50px auto 0;
   text-align: center;
   border-radius: 20px;
 }
@@ -88,4 +87,17 @@ footer {
 .wind {
   text-align: start;
   font-size: 28px;
+}
+
+.weather-body {
+  display: none;
+}
+
+.error {
+  display: none;
+  text-align: left;
+  margin-top: 15px;
+  color: rgb(226, 24, 24);
+  font-size: 18px;
+  font-weight: 600;
 }
